Done some responsive design. Bug with overflow scroll

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,5 +4,6 @@
 
 .weather-app__list {
   margin-top: 50px;
+  margin-bottom: 50px;
   list-style: none;
 }
