--- a/client/src/components/DailyCardInfo/DailyCardInfo.css
+++ b/client/src/components/DailyCardInfo/DailyCardInfo.css
@@ -2,12 +2,14 @@
   display: flex;
   justify-content: space-around;
   margin-top: 20px;
+  overflow: scroll;
 }
 
 .weekly-info__card {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 80px;
 }
 
 .weekly-info__card h3 {
