--- a/client/src/components/HourlyCardInfo/HourlyCardInfo.css
+++ b/client/src/components/HourlyCardInfo/HourlyCardInfo.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-around;
   margin-top: 20px;
+  overflow: scroll;
 }
 
 .hourly-info__card {
